--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.6",
     "formik": "^1.5.7",
     "immutable": "^4.0.0-rc.12",
+    "moment-timezone": "^0.5.26",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
