--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "hapi-rate-limit": "^3.1.3",
     "inert": "^5.1.3",
     "knex": "^0.16.5",
+    "moment-timezone": "^0.5.27",
     "nodemon": "^1.19.0",
     "objection": "^1.6.9",
     "objection-softdelete": "^2.0.1",
