--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,8 @@
   },
   "scripts": {
     "start": "npm install && nodemon",
-    "migrate": "knex migrate:latest"
+    "migrate": "knex migrate:latest",
+    "test": "jest",
+    "test:watch": "jest --watch --verbose"
   }
 }
