--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,3 +52,9 @@ jobs:
           key: dependency-cache-{{ checksum "frontend/package.json" }}
           paths:
             - frontend/node_modules
+workflows:
+  version: 2
+  build:
+    jobs:
+      - api
+      - frontend
