--- a/api/package.json
+++ b/api/package.json
@@ -22,10 +22,12 @@
     "start": "npm install && nodemon",
     "migrate": "knex migrate:latest",
     "lint": "eslint . --max-warnings 0",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch --verbose"
   },
   "devDependencies": {
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "eslint-plugin-jest": "^23.0.2",
+    "jest": "^24.9.0"
   }
 }
